<resources>
    <string name="app_name">AdVideos</string>
    <string name="default_selected_setting">N/A</string>
    <string name="jwplayer">JW Player</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="test_str">Testing!</string>
    <string name="large_autoplay_mute">Large Autoplay Mute 1280x720</string>
    <string name="small_click_to_start_unmuted">Small Click-to-Start Unmuted 300x169</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="selected">Selected: </string>
    <string name="width">Width: </string>
    <string name="height">Height: </string>
    <string name="default_width">640</string>
    <string name="default_height">360</string>
    <string name="autostart">Autostart:</string>
    <string name="controls">Controls:</string>
    <string name="file">File</string>
    <string name="url">URL</string>
    <string name="mute">Mute:</string>
    <string name="repeat">Repeat:</string>
    <string name="primary">Primary:</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="configuration_title">Configuration</string>
    <string name="video_player_title">Video Player</string>
    <string name="video_description">Video Description</string>
    <string name="vast_url">VAST URL: </string>
    <string name="content_url">
        <![CDATA[http://rmcdn.2mdn.net/MotifFiles/html/1248596/android_1330378998288.mp4]]>
    </string>
    <string name="ad_tag_url">
        <![CDATA[http://video.bnmla.com/video?vzid=5459&vast=1&vWidth=[player_width]&vHeight=[player_height]&ohname=[page]&cb=[CACHE_BREAKER]&sw=1]]>
    </string>
    <string name="test_url">
        <![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]>
    </string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="player_config_settings">Player Configuration Settings: </string>
    <string name="ad_config_settings">Advertising Configuration Settings: </string>
    <string name="ad_source">Ad Source: </string>
    <string name="vpaid_url">VPAID URL: </string>
    <string name="vpaid_default_target">
        <![CDATA[http://search.spotxchange.com/vast/2.00/85394?VPAID=js&app[domain]=com.spotxchange.vpaid]]>
    </string>
</resources>

