<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/textbox_llview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:text="@string/width"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/width_edittext"
                android:text="@string/default_width"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:inputType="number"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/height"
                android:textColor="#000000"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/height_edittext"
                android:text="@string/default_height"
                android:inputType="number"
                android:singleLine="true"
                android:paddingLeft="8dp"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingLeft="-25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:text="@string/aspect_ratio"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/asepectratio_edittext"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/primary"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/primary_spinner"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="30dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:text="@string/autostart"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/autostart_spinner"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="30dp"
                />

            <TextView
                android:text="@string/controls"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/controls_spinner"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="30dp"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/repeat"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/repeat_spinner"
                android:layout_width="100dp"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/mute"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/mute_spinner"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="30dp"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>