<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bnmla.advideos.MainActivity"
    android:gravity="center" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:id="@+id/upper_llview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="10dp"
                        android:id="@+id/selected_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/selected"/>
                    <TextView
                        android:id="@+id/selected_config_tv"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/selected_tv"
                        android:text="@string/default_selected_setting"
                        android:textColor="#FF3E5F"/>
                </RelativeLayout>


                <Spinner
                    android:id="@+id/video_spinner"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp" />



                <LinearLayout
                    android:id="@+id/textbox_llview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/width"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/width_edittext"
                        android:text="@string/default_width"
                        android:paddingLeft="8dp"
                        android:singleLine="true"
                        android:inputType="number"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/height"
                        android:textColor="#000000"
                        android:paddingLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/height_edittext"
                        android:text="@string/default_height"
                        android:inputType="number"
                        android:singleLine="true"
                        android:paddingLeft="8dp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="5dp"
                    android:paddingLeft="-25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/aspect_ratio"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/asepectratio_edittext"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/primary"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/primary_spinner"
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/autostart"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/autostart_spinner"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        />

                    <TextView
                        android:text="@string/controls"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/controls_spinner"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:paddingLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/repeat"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/repeat_spinner"
                        android:layout_width="100dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:text="@string/mute"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/mute_spinner"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/current_url"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/current_url"
                        android:layout_marginLeft="5dp"
                        android:textColor="#000000"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lower_llview"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/submit_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"/>

                    <Button
                        android:id="@+id/reset_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
