<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/selected_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/selected"/>
            <TextView
                android:id="@+id/selected_config_tv"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/selected_tv"
                android:text="@string/default_selected_setting"
                android:textColor="#FF3E5F"/>
        </RelativeLayout>


        <Spinner
            android:id="@+id/video_spinner"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <LinearLayout
            android:id="@+id/lower_llview"
            android:paddingTop="5dp"
            android:layout_below="@id/upper_llview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/submit_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/reset"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>